fix volume slider position on firefox

--- a/WebManager/static/player_style.css
+++ b/WebManager/static/player_style.css
@@ -23,7 +23,6 @@
 }
 #volume-group{
     left:40px;
-    bottom:3px;
     width: 15px;
     overflow: hidden;
     padding: 6px 10px 6px 6px;
